--- a/app/src/main/res/menu/menu_app.xml
+++ b/app/src/main/res/menu/menu_app.xml
@@ -3,8 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.ericksprengel.aa.retrofit.AppActivity">
     <item
+        android:id="@+id/action_user"
+        android:title="@string/action_choose_user"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_about"
-        android:orderInCategory="100"
         android:title="@string/action_about"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
